--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "author": "Nitin Tulswani",
   "license": "MIT",
   "dependencies": {
+    "cross-env": "^5.0.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-object-inspector": "^0.2.1"
   },
   "files": [
     "build",
@@ -29,7 +31,8 @@
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --watch",
     "build": "NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack.config.js --display-max-modules 0",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "dev": "cross-env NODE_ENV=development ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config ./test/webpack.config.js --progress --colors --content-base test/"
   },
   "keywords": [
     "react",
