--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
   "author": "Nitin Tulswani",
   "license": "MIT",
   "dependencies": {
+    "babel-eslint": "^7.2.3",
     "cross-env": "^5.0.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-object-inspector": "^0.2.1"
@@ -31,7 +40,8 @@
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --watch",
     "build": "NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack.config.js --display-max-modules 0",
-    "prepublish": "npm run build",
+    "prepublish": "npm run lint && npm run build",
+    "lint": "./node_modules/.bin/eslint components/",
     "dev": "cross-env NODE_ENV=development ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config ./test/webpack.config.js --progress --colors --content-base test/"
   },
   "keywords": [
