--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --open",
-    "build:production": "NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack/webpack.config.js --display-max-modules 0"
+    "build:production": "NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack/webpack.config.js --display-max-modules 0",
+    "prepublish": "npm run build:production",
+    "prebuild": "rm -rf ./build"
   }
 }
