--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "start": "cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --open",
     "build:production": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack/webpack.config.js --display-max-modules 0",
     "prepublish": "npm run build:production",
-    "prebuild": "rm -rf ./build",
-    "dev": "cross-env NODE_ENV=development ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config ./test/webpack.config.js --progress --colors --content-base test/"
+    "prebuild": "rm -rf ./build"
   },
   "keywords": [
     "react",
