--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-	"presets": ["react-app"]
+	"presets": ["react-app"],
+  "env": {
+    "production": {
+      "plugins": [
+        ["transform-react-remove-prop-types", {
+          "mode": "wrap",
+          "ignoreFilenames": ["node_modules"]
+        }]
+      ]
+    }
+  }
 }
