--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,10 @@
     "no-await-in-loop": 1,
 
     "react/jsx-filename-extension": 0,
-    "react/no-array-index-key": 0
+    "react/no-array-index-key": 0,
+    "no-restricted-syntax": 0,
+    "jsx-a11y/no-noninteractive-element-interactions": 0,
+    "react/require-default-props": 0
   },
   "settings": {
     "import/resolver": {
