--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "object-shorthand": 1,
     "arrow-parens": 1,
     "no-await-in-loop": 1,
+    "jsx-a11y/no-static-element-interactions": 1,
 
     "react/jsx-filename-extension": 0,
     "react/no-array-index-key": 0
