--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terminal-in-react",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "A component for making a terminal in React",
   "main": "index.js",
   "repository": "https://www.github.com/nitin42/terminal-in-react",
@@ -40,11 +40,12 @@
     "html-webpack-template": "^6.0.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.1.0",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.5.1"
   },
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.dev.config.js --open --progress --colors --content-base starter/ --hot",
-    "build:production": "NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack/webpack.config.js --display-max-modules 0",
+    "build:production": "NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack/webpack.config.js --display-max-modules 0 -p",
     "prepublish": "npm run lint && npm run build:production",
     "prebuild": "rm -rf ./build",
     "lint": "./node_modules/.bin/eslint components/"
