move all of args into the package and clean up eslint

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "author": "Nitin Tulswani",
   "license": "MIT",
   "dependencies": {
-    "args": "^3.0.2",
     "camelcase": "^4.1.0",
     "chalk": "^2.0.1",
     "lodash.clonedeep": "^4.5.0",
+    "minimist": "^1.2.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -29,7 +29,7 @@
     "babili-webpack-plugin": "^0.1.2",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
-    "eslint": "^4.1.1",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-babel": "^4.1.1",
