--- a/.npmignore
+++ b/.npmignore
@@ -21,7 +21,6 @@
 *.pid
 *.gz
 *.orig
-.babelrc
 
 work
 src
@@ -37,10 +36,19 @@ components
 starter
 webpack
 
+CONTRIBUTING.md
+todo.md
+
 .project
 .idea
 .settings
 .iml
+.hound.yml
+.gitignore
+.eslintrc
+.eslintignore
+.editorconfig
+.babelrc
 *.sublime-workspace
 *.sublime-project
 
