--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terminal-in-react",
-  "version": "3.0.0-beta.0",
+  "version": "3.0.0-beta.15",
   "description": "A component for making a terminal in React",
   "main": "index.js",
   "repository": "https://www.github.com/nitin42/terminal-in-react",
@@ -23,10 +23,15 @@
   ],
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.6",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.0.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
     "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.4",
@@ -37,6 +42,9 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "jest": "^20.0.4",
+    "jsdom": "^11.1.0",
+    "react-test-renderer": "^15.6.1",
     "style-loader": "^0.18.2",
     "terminal-in-react-pseudo-file-system-plugin": "^1.2.0",
     "webpack": "^3.1.0",
@@ -45,10 +53,22 @@
   },
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.dev.config.js --open --progress --colors --content-base starter/ --hot",
-    "build:production": "NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack/webpack.config.js --display-max-modules 0 -p",
+    "build:production": "NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack/webpack.config.js --display-max-modules 0",
     "prepublishOnly": "npm run lint && npm run build:production",
     "prebuild": "rm -rf ./build",
-    "lint": "./node_modules/.bin/eslint components/"
+    "lint": "./node_modules/.bin/eslint components/",
+    "test": "./node_modules/.bin/jest",
+    "test:watch": "./node_modules/.bin/jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    },
+    "setupFiles": [
+      "<rootDir>/__mocks__/dom.js"
+    ]
   },
   "keywords": [
     "react",
