--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,17 @@
 {
-	"presets": ["react-app"],
+	"presets": ["es2015", "react", "stage-0"],
   "env": {
     "production": {
       "plugins": [
-        ["transform-react-remove-prop-types", {
-          "mode": "wrap",
-          "ignoreFilenames": ["node_modules"]
-        }]
+        "transform-class-properties",
+        "transform-object-rest-spread",
+        "transform-react-remove-prop-types"
+      ]
+    },
+    "development": {
+      "plugins": [
+        "transform-class-properties",
+        "transform-object-rest-spread"
       ]
     }
   }
