--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,11 @@
 {
-	"presets": ["es2015", "react", "stage-0"],
-  "env": {
-    "production": {
-      "plugins": [
-        "transform-class-properties",
-        "transform-object-rest-spread",
-        "transform-react-remove-prop-types"
-      ]
-    },
-    "development": {
-      "plugins": [
-        "transform-class-properties",
-        "transform-object-rest-spread"
-      ]
-    }
-  }
+  "presets": ["es2015", "react", "stage-0"],
+  "plugins": [
+    "transform-decorators-legacy",
+    ["transform-es2015-modules-umd", {
+      "globals": {
+        "react": "React"
+      }
+    }]
+  ]
 }
