--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
   "name": "terminal-in-react",
-  "version": "3.2.2",
+  "version": "3.3.0",
   "description": "A component for making a terminal in React",
-  "main": "build/index.js",
+  "main": "lib/js/index.js",
+  "module": "src/index.js",
   "repository": "https://www.github.com/nitin42/terminal-in-react",
   "author": "Nitin Tulswani",
   "license": "MIT",
+  "peerDependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  },
   "dependencies": {
     "camelcase": "^4.1.0",
-    "chalk": "^2.0.1",
-    "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "minimist": "^1.2.0",
     "platform": "^1.3.4",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "react-object-inspector": "^0.2.1",
     "string-similarity": "^1.2.0",
     "whatkey": "^2.0.1"
   },
-  "files": [
-    "build",
-    "index.js"
-  ],
   "devDependencies": {
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "babel-preset-babili": "^0.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^3.0.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
@@ -45,9 +44,13 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "jest": "^20.0.4",
     "jsdom": "^11.1.0",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
     "react-test-renderer": "^15.6.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "terminal-in-react-pseudo-file-system-plugin": "^1.2.0",
     "webpack": "^3.1.0",
@@ -57,11 +60,15 @@
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.dev.config.js --open --progress --colors --content-base starter/ --hot",
     "build:production": "NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack/webpack.config.js --display-max-modules 0",
-    "prepublishOnly": "npm run lint && npm run build:production",
+    "prepublish": "npm run lint && npm run build",
     "prebuild": "rm -rf ./build",
     "lint": "./node_modules/.bin/eslint components/",
     "test": "./node_modules/.bin/jest",
-    "test:watch": "./node_modules/.bin/jest --watch"
+    "test:watch": "./node_modules/.bin/jest --watch",
+    "build": "npm run build:lib && npm run build:scss && npm run build:bundle",
+    "build:bundle": "NODE_ENV=production webpack --config ./webpack/webpack.config.js",
+    "build:lib": "NODE_ENV=production babel src/js --out-dir lib/js --source-maps",
+    "build:scss": "NODE_ENV=production node-sass src/styles --recursive --source-map true --output lib/css"
   },
   "jest": {
     "testEnvironment": "node",
