--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "terminal-in-react",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "description": "A component for making a terminal in React",
   "main": "lib/js/index.js",
   "module": "src/index.js",
   "repository": "https://www.github.com/nitin42/terminal-in-react",
   "author": "Nitin Tulswani",
   "license": "MIT",
-  "peerDependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
-  },
   "dependencies": {
     "camelcase": "^4.1.0",
     "lodash.isequal": "^4.5.0",
     "minimist": "^1.2.0",
     "platform": "^1.3.4",
     "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-object-inspector": "^0.2.1",
     "string-similarity": "^1.2.0",
     "whatkey": "^2.0.1"
@@ -59,7 +57,6 @@
   },
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.dev.config.js --open --progress --colors --content-base starter/ --hot",
-    "build:production": "NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack/webpack.config.js --display-max-modules 0",
     "prepublish": "npm run lint && npm run build",
     "prebuild": "rm -rf ./build",
     "lint": "./node_modules/.bin/eslint components/",
