--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terminal-in-react",
-  "version": "3.3.1",
+  "version": "3.3.2",
   "description": "A component for making a terminal in React",
   "main": "lib/js/index.js",
   "module": "src/index.js",
@@ -57,8 +57,8 @@
   },
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.dev.config.js --open --progress --colors --content-base starter/ --hot",
-    "prepublish": "npm run lint && npm run build",
-    "prebuild": "rm -rf ./build",
+    "prepublishOnly": "npm run lint && npm run build",
+    "prebuildOnly": "rm -rf ./build",
     "lint": "./node_modules/.bin/eslint components/",
     "test": "./node_modules/.bin/jest",
     "test:watch": "./node_modules/.bin/jest --watch",
