--- a/package.json
+++ b/package.json
@@ -53,24 +53,23 @@
     "webpack-dev-server": "^2.5.1"
   },
   "scripts": {
-    "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.dev.config.js --open --progress --colors --content-base starter/ --hot",
+    "start": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
     "prepublishOnly": "npm run lint && npm run build",
     "prebuildOnly": "rm -rf ./build",
     "lint": "./node_modules/.bin/eslint components/",
     "test": "./node_modules/.bin/jest",
     "test:watch": "./node_modules/.bin/jest --watch",
-    "build": "npm run build:lib && npm run build:scss && npm run build:bundle",
+    "build": "npm run build:lib && npm run build:bundle",
     "build:bundle": "NODE_ENV=production webpack --config ./webpack/webpack.config.js",
-    "build:lib": "NODE_ENV=production babel src/js --out-dir lib/js --source-maps",
-    "build:scss": "NODE_ENV=production node-sass src/styles --recursive --source-map true --output lib/css",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build:lib": "NODE_ENV=production babel src/js --out-dir lib/js --source-maps"
   },
   "jest": {
     "testEnvironment": "node",
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+      "\\.(css)$": "<rootDir>/__mocks__/styleMock.js"
     },
     "setupFiles": [
       "<rootDir>/__mocks__/dom.js"
