--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terminal-in-react",
-  "version": "3.4.2",
+  "version": "3.5.0",
   "description": "A component for making a terminal in React",
   "main": "lib/js/index.js",
   "module": "src/index.js",
@@ -8,7 +8,7 @@
   "author": "Nitin Tulswani",
   "license": "MIT",
   "dependencies": {
-    "camelcase": "^4.1.0",
+    "lodash.camelcase": "^4.3.0",
     "lodash.isequal": "^4.5.0",
     "minimist": "^1.2.0",
     "platform": "^1.3.4",
