--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "minimist": "^1.2.0",
     "platform": "^1.3.4",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-object-inspector": "^0.2.1",
     "string-similarity": "^1.2.0",
     "styled-components": "^2.1.1",
@@ -22,10 +22,10 @@
   },
   "devDependencies": {
     "@storybook/react": "^3.2.3",
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "8.0.0",
     "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
+    "babel-eslint": "8.2.1",
+    "babel-jest": "22.2.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
@@ -35,19 +35,19 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
-    "compression-webpack-plugin": "^0.4.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.2",
+    "compression-webpack-plugin": "^1.1.6",
+    "eslint": "4.17.0",
+    "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "jest": "^20.0.4",
+    "jest": "22.2.2",
     "jsdom": "^11.1.0",
-    "react-test-renderer": "^15.6.1",
-    "terminal-in-react-pseudo-file-system-plugin": "^2.0.0",
+    "react-test-renderer": "16.2.0",
+    "terminal-in-react-pseudo-file-system-plugin": "3.0.0",
     "webpack": "^3.1.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.5.1"
