--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@storybook/react": "^3.2.3",
     "autoprefixer": "8.0.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "8.2.1",
     "babel-jest": "22.2.2",
