--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "16.2.0",
     "react-object-inspector": "^0.2.1",
     "string-similarity": "^1.2.0",
-    "styled-components": "^2.1.1",
+    "styled-components": "3.1.6",
     "whatkey": "^2.0.1"
   },
   "devDependencies": {
