--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@weitongxaun/terminal-in-react",
-  "version": "4.3.1",
+  "version": "4.3.1-beta.0",
   "description": "A component for making a terminal in React",
   "main": "lib/js/index.js",
   "module": "src/index.js",
